--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
             </div>
         </section>
     
-
+         <!-- Third party plugin JS-->
+         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+         <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
         <!-- Scripts JS-->
         <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script  src="js/navbar.js"></script>
