--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     
 
         <!-- Scripts JS-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script  src="js/navbar.js"></script>
     </body>
 </html>
