--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="text">
                 <div class="big-text">
                     <h1>
-                        Bonjour, moi c'est Allan et je suis <span class="color-txt">Webdesigner</span> avec des compétences en <span class="color-txt">code</span> :)
+                        Bonjour, moi c'est Allann et je suis <span class="color-txt">Webdesigner</span> avec des compétences en <span class="color-txt">code</span> :)
                     </h1>
                 </div>
                 <div class="little-text">
