--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <!-- style css -->
         <link href="css/style.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        
+        <!-- animate css -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
     </head>
 
@@ -72,7 +75,7 @@
             <div class="text">
                 <div class="big-text">
                     <h1>
-                        Bonjour, moi c'est Allann et je suis <span class="color-txt">Webdesigner</span> avec des compétences en <span class="color-txt">code</span> :)
+                        Bonjour, moi c'est Allan et je suis <span class="color-txt">Webdesigner</span> avec des compétences en <span class="color-txt">code</span> :)
                     </h1>
                 </div>
                 <div class="little-text">
@@ -93,8 +96,7 @@
     
 
         <!-- Scripts JS-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script  src="js/navbar.js"></script>
     </body>
 </html>
