--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="text">
                 <div class="big-text">
                     <h1>
-                        Bonjour, moi c'est Allann et je suis <span class="color-txt">Webdesigner</span> avec des compétences en <span class="color-txt">code</span> :)
+                        Bonjour, moi c'est Allan et je suis <span class="color-txt">Webdesigner</span> avec des compétences en <span class="color-txt">code</span> :)
                     </h1>
                 </div>
                 <div class="little-text">
@@ -89,6 +89,15 @@
                     <div class="text">Actuellement disponible</div>
                 </div>
             </div>
+        </section>
+
+        <section class="second">
+          <div class="title">
+            <hr class="trait-deco"/>
+            <h2>Projets</h2>
+            <hr class="trait-deco"/>
+          </div>
+
         </section>
     
 
