ajout cards projets

--- a/index.html
+++ b/index.html
@@ -98,6 +98,29 @@
             <hr class="trait-deco"/>
           </div>
 
+          <div class="cards">
+
+            <div class="card-projet">
+              <div class="image">
+                <img src="img/mywe/Presentation.png" alt="My Wonderful Event">
+              </div>
+
+              <div class="infos">
+                  <h3 class="title-projet">
+                    My Wonderful Event
+                  </h3>
+                  <p class="description-projet">
+                    MyWe est une application permettant d'organiser facilement et rapidement un évènement comme un anniversaire, un mariage, une sortie ou une soirée entre amis.
+                  </p>
+                  <div class="cta">
+                    <button class="cta-voir-projet">Découvrir</button>
+                  </div>
+              </div>
+
+            </div>
+
+          </div>
+
         </section>
     
 
