Section 2 et navbar
Ajouts des cards, gestion responsive, et ajustement navbar mobile

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <nav>
                 <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
                 <ul class="nav-list">
-                  <li>
+                  <li class="test">
                     <a href="#">Accueil</a>
                   </li>
                   <li>
@@ -116,7 +116,42 @@
                     <button class="cta-voir-projet">Découvrir</button>
                   </div>
               </div>
+            </div>
 
+            <div class="card-projet">
+              <div class="image">
+                <img src="img/fnc/fitnclothes-3.png" alt="Fit'N Clothes">
+              </div>
+
+              <div class="infos">
+                  <h3 class="title-projet">
+                    Fit'N Clothes
+                  </h3>
+                  <p class="description-projet">
+                    Fit'N Clothes est un challenge UX dont l'objectif est de proposer une solution permettant de répondre à un besoin réel que nous rencontrons tous, ou pouvons rencontrer au cours de nos achats en ligne.
+                  </p>
+                  <div class="cta">
+                    <button class="cta-voir-projet">Découvrir</button>
+                  </div>
+              </div>
+            </div>
+
+            <div class="card-projet">
+              <div class="image">
+                <img src="img/mcdo/mockups-general-app.jpg" alt="McDo+ App">
+              </div>
+
+              <div class="infos">
+                  <h3 class="title-projet">
+                    McDo+ App
+                  </h3>
+                  <p class="description-projet">
+                    Je me suis lancé le challenge de proposer un design différent de l'app McDo+ actuelle en me concentrant sur quelques pages. Une naviguation plus simple, de nouvelles fonctionnalités dans le choix de son burger ou de la composition de son menu, découvrez ma vision de l'application.
+                  </p>
+                  <div class="cta">
+                    <button class="cta-voir-projet">Découvrir</button>
+                  </div>
+              </div>
             </div>
 
           </div>
