ajout voir plus section 2

--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@
 
           </div>
 
+          <div class="voir-plus">
+            <a href="#">Voir plus</a>
+          </div>
+
         </section>
     
 
