--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
         </section>
 
-        <section class="first">
+        <section class="first ovrflow">
             <div class="text">
                 <div class="big-text">
                     <h1>
@@ -91,7 +91,7 @@
             </div>
         </section>
 
-        <section class="second">
+        <section class="second ovrflow">
           <div class="title">
             <hr class="trait-deco"/>
             <h2>Projets</h2>
@@ -162,7 +162,7 @@
 
         </section>
         
-        <section class="third">
+        <section class="third ovrflow">
 
           <div class="background">
             <div class="title">
@@ -178,6 +178,14 @@
             </div>
           </div>
 
+        </section>
+
+        <section class="fourth ovrflow">
+          <div class="title">
+            <hr class="trait-deco"/>
+            <h2>Retouches photos</h2>
+            <hr class="trait-deco"/>
+          </div>
         </section>
 
         <!-- Scripts JS-->
