--- a/index.html
+++ b/index.html
@@ -186,6 +186,12 @@
             <h2>Retouches photos</h2>
             <hr class="trait-deco"/>
           </div>
+
+          <div class="description">
+            <h2>
+              Quelques modifications, améliorations et créations réalisées grâce à l'outil Photoshop
+            </h2>
+        </div>
         </section>
 
         <!-- Scripts JS-->
