ajout carousel mobile section 4

--- a/index.html
+++ b/index.html
@@ -191,7 +191,26 @@
             <h2>
               Quelques modifications, améliorations et créations réalisées grâce à l'outil Photoshop
             </h2>
-        </div>
+          </div>
+
+          <div class="carousel-photos">
+            <div class="image">
+              <img src="img/photoshop/dj-affiche.jpg" alt="dj show">
+            </div>
+            
+            <div class="image">
+              <img src="img/photoshop/basket-avant.jpeg" alt="terrain de basket">
+            </div>
+
+            <div class="image">
+              <img src="img/photoshop/basket-apres.png" alt="terrain de basket">
+            </div>
+
+            <div class="image">
+              <img src="img/photoshop/SNCF.jpg" alt="affiche sncf">
+            </div>
+          </div>
+
         </section>
 
         <!-- Scripts JS-->
