progressbar top + ajustement section retouches photos

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     </head>
 
     <body id="home">
+
+      
         <!-- Navigation-->
         <section class="nav-bar" id="nav-bar">
             <div class="nav-container">
@@ -38,19 +40,19 @@
                     <a href="#">Projets</a>
                     <ul class="nav-dropdown">
                       <li>
-                        <a href="#">- My Wonderful Event</a>
+                        <a href="#">My Wonderful Event</a>
                       </li>
                       <li>
-                        <a href="#">- Fit'N Clothes</a>
+                        <a href="#">Fit'N Clothes</a>
                       </li>
                       <li>
-                        <a href="#">- McDo+</a>
+                        <a href="#">McDo+</a>
                       </li>
                       <li>
-                        <a href="#">- SubRing</a>
+                        <a href="#">SubRing</a>
                       </li>
                       <li>
-                        <a href="#">- Angeluzzo Restaurant (GitHub)</a>
+                        <a href="#">Angeluzzo Restaurant (GitHub)</a>
                       </li>
                     </ul>
                   </li>
@@ -67,6 +69,8 @@
               </nav>
             </div>
         </section>
+
+        <div id="progress"></div>
 
         <section class="first ovrflow">
             <div class="text">
@@ -193,6 +197,24 @@
             </h2>
           </div>
 
+          <!-- <div class="carousel-photos">
+            <div class="image">
+              <img src="img/photoshop/dj-affiche.jpg" alt="dj show">
+            </div>
+            
+            <div class="image">
+              <img src="img/photoshop/basket-avant.jpeg" alt="terrain de basket">
+            </div>
+
+            <div class="image">
+              <img src="img/photoshop/basket-apres.png" alt="terrain de basket">
+            </div>
+
+            <div class="image">
+              <img src="img/photoshop/SNCF.jpg" alt="affiche sncf">
+            </div>
+          </div> -->
+
           <div class="carousel-photos">
             <div class="image">
               <img src="img/photoshop/dj-affiche.jpg" alt="dj show">
@@ -213,9 +235,14 @@
 
         </section>
 
+        <section class="footer">
+          <p>&copy; Allan IZZI 2022</p>
+        </section>
+
         <!-- Scripts JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
         <script  src="js/navbar.js"></script>
+        <script  src="js/progress.js"></script>
     </body>
 </html>
