ajustement responisve des cards section 2 et max width de la page

--- a/index.html
+++ b/index.html
@@ -70,8 +70,6 @@
             </div>
         </section>
 
-        <div id="progress"></div>
-
         <section class="first ovrflow">
             <div class="text">
                 <div class="big-text">
@@ -95,68 +93,89 @@
             </div>
         </section>
 
-        <section class="second ovrflow">
+        <section class="second ovrflow" id="second-section">
           <div class="title">
             <hr class="trait-deco"/>
             <h2>Projets</h2>
             <hr class="trait-deco"/>
           </div>
 
-          <div class="cards">
+          <div class="cards" id="cards">
 
-            <div class="card-projet">
-              <div class="image">
-                <img src="img/mywe/Presentation.png" alt="My Wonderful Event">
+              <div class="card-projet" id="card-projet">
+                <div class="image">
+                  <img src="img/mywe/Presentation.png" alt="My Wonderful Event">
+                </div>
+
+                <div class="infos">
+                    <h3 class="title-projet">
+                      My Wonderful Event
+                    </h3>
+                    <p class="description-projet">
+                      MyWe est une application permettant d'organiser facilement et rapidement un évènement comme un anniversaire, un mariage, une sortie ou une soirée entre amis.
+                    </p>
+                    <div class="cta">
+                      <button class="cta-voir-projet">Découvrir</button>
+                    </div>
+                </div>
               </div>
 
-              <div class="infos">
-                  <h3 class="title-projet">
-                    My Wonderful Event
-                  </h3>
-                  <p class="description-projet">
-                    MyWe est une application permettant d'organiser facilement et rapidement un évènement comme un anniversaire, un mariage, une sortie ou une soirée entre amis.
-                  </p>
-                  <div class="cta">
-                    <button class="cta-voir-projet">Découvrir</button>
-                  </div>
-              </div>
-            </div>
+              <div class="card-projet" id="card-projet">
+                <div class="image">
+                  <img src="img/fnc/fitnclothes-3.png" alt="Fit'N Clothes">
+                </div>
 
-            <div class="card-projet">
-              <div class="image">
-                <img src="img/fnc/fitnclothes-3.png" alt="Fit'N Clothes">
-              </div>
-
-              <div class="infos">
-                  <h3 class="title-projet">
-                    Fit'N Clothes
-                  </h3>
-                  <p class="description-projet">
-                    Fit'N Clothes est un challenge UX dont l'objectif est de proposer une solution permettant de répondre à un besoin réel que nous rencontrons tous, ou pouvons rencontrer au cours de nos achats en ligne.
-                  </p>
-                  <div class="cta">
-                    <button class="cta-voir-projet">Découvrir</button>
-                  </div>
-              </div>
-            </div>
-
-            <div class="card-projet">
-              <div class="image">
-                <img src="img/mcdo/mockups-general-app.jpg" alt="McDo+ App">
+                <div class="infos">
+                    <h3 class="title-projet">
+                      Fit'N Clothes
+                    </h3>
+                    <p class="description-projet">
+                      Fit'N Clothes est un challenge UX dont l'objectif est de proposer une solution permettant de répondre à un besoin réel que nous rencontrons tous, ou pouvons rencontrer au cours de nos achats en ligne.
+                    </p>
+                    <div class="cta">
+                      <button class="cta-voir-projet">Découvrir</button>
+                    </div>
+                </div>
               </div>
 
-              <div class="infos">
-                  <h3 class="title-projet">
-                    McDo+ App
-                  </h3>
-                  <p class="description-projet">
-                    Je me suis lancé le challenge de proposer un design différent de l'app McDo+ actuelle en me concentrant sur quelques pages. Une naviguation plus simple, de nouvelles fonctionnalités dans le choix de son burger ou de la composition de son menu, découvrez ma vision de l'application.
-                  </p>
-                  <div class="cta">
-                    <button class="cta-voir-projet">Découvrir</button>
-                  </div>
+              <div class="card-projet" id="card-projet">
+                <div class="image">
+                  <img src="img/mcdo/mockups-general-app.jpg" alt="McDo+ App">
+                </div>
+
+                <div class="infos">
+                    <h3 class="title-projet">
+                      McDo+ App
+                    </h3>
+                    <p class="description-projet">
+                      Je me suis lancé le challenge de proposer un design différent de l'app McDo+ actuelle en me concentrant sur quelques pages. Une naviguation plus simple, de nouvelles fonctionnalités dans le choix de son burger ou de la composition de son menu, découvrez ma vision de l'application.
+                    </p>
+                    <div class="cta">
+                      <button class="cta-voir-projet">Découvrir</button>
+                    </div>
+                </div>
               </div>
-            </div>
+
+              <div class="card-projet" id="card-projet">
+                <div class="image">
+                  <img src="img/subring/mockup_subring_notif.png" alt="SubRing">
+                </div>
+
+                <div class="infos">
+                    <h3 class="title-projet">
+                      SubRing
+                    </h3>
+                    <p class="description-projet">
+                      Il est difficile de garder une trace de tous les produits et services auxquels nous nous sommes abonnés mensuellement. Tout ce que l'on peut observer, ce sont des prélèvements sur notre compte bancaire, parfois même de services oubliés ou que nous n'utilisons plus.
+                      Quelle solution proposer permettant de mieux gérer ses abonnements ?
+                    </p>
+                    <div class="cta">
+                      <button class="cta-voir-projet">Découvrir</button>
+                    </div>
+                </div>
+              </div>
+            <!-- </div> -->
+
 
           </div>
 
@@ -243,6 +262,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
         <script  src="js/navbar.js"></script>
-        <script  src="js/progress.js"></script>
+        <script  src="js/functions.js"></script>
     </body>
 </html>
