ajout angeluzzo et modif gap section 1

--- a/index.html
+++ b/index.html
@@ -174,7 +174,24 @@
                     </div>
                 </div>
               </div>
-            <!-- </div> -->
+
+              <div class="card-projet" id="card-projet">
+                <div class="image">
+                  <img src="img/angeluzzo/img-restaurant.jpg" alt="Angeluzzo restaurant">
+                </div>
+
+                <div class="infos">
+                    <h3 class="title-projet">
+                      Angelùzzo Restaurant
+                    </h3>
+                    <p class="description-projet">
+                      Ce projet a été effectué dans le cadre d'un stage de remplacement suite aux évènements liés au COVID-19. N'étant lié à aucune entreprise, il m'a été donné comme consigne de trouver un projet à réaliser seul durant 2 mois. Souhaitant évoluer dans le front-end comme l'UX / UI Design, j'ai donc décidé de recréer le site web du restaurant Angelùzzo. Les technologies utilisées dans ce projet sont principalement nouvelles pour moi, leurs potentiel et fonctionnalités n'ont donc été qu'à peine explorées.
+                    </p>
+                    <div class="cta">
+                      <button class="cta-voir-projet">Découvrir</button>
+                    </div>
+                </div>
+              </div>
 
 
           </div>
