gestion cards section 2
afichage selon taille ecran

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 </div>
               </div>
 
-              <div class="card-projet" id="card-projet">
+              <div class="card-projet subring" id="card-projet">
                 <div class="image">
                   <img src="img/subring/mockup_subring_notif.png" alt="SubRing">
                 </div>
@@ -175,7 +175,7 @@
                 </div>
               </div>
 
-              <div class="card-projet" id="card-projet">
+              <div class="card-projet angeluzzo" id="card-projet">
                 <div class="image">
                   <img src="img/angeluzzo/img-restaurant.jpg" alt="Angeluzzo restaurant">
                 </div>
