--- a/index.html
+++ b/index.html
@@ -205,12 +205,15 @@
         <section class="third ovrflow">
 
           <div class="background">
-            <div class="title">
-              <h2>Conceptions professionnelles</h2>
-            </div>
 
-            <div class="presentation">
-              Sur cette page, quelques créations réalisées au cours de ma dernière expérience professionnelle.
+            <div class="titre-presentation">
+              <div class="title">
+                <h2>Conceptions professionnelles</h2>
+              </div>
+
+              <div class="presentation">
+                Sur cette page, quelques créations réalisées au cours de ma dernière expérience professionnelle.
+              </div>
             </div>
             
             <div class="cta">
