section carousel scroll

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             </h2>
           </div>
 
-          <!-- <div class="carousel-photos">
+          <div class="carousel-photos" onwheel="myFunction(event)">
             <div class="image">
               <img src="img/photoshop/dj-affiche.jpg" alt="dj show">
             </div>
@@ -252,23 +252,19 @@
             <div class="image">
               <img src="img/photoshop/SNCF.jpg" alt="affiche sncf">
             </div>
-          </div> -->
 
-          <div class="carousel-photos">
             <div class="image">
-              <img src="img/photoshop/dj-affiche.jpg" alt="dj show">
-            </div>
-            
-            <div class="image">
-              <img src="img/photoshop/basket-avant.jpeg" alt="terrain de basket">
+              <img src="img/photoshop/ikea-panneau.jpg" alt="affiche ikea">
             </div>
 
             <div class="image">
-              <img src="img/photoshop/basket-apres.png" alt="terrain de basket">
+              <img src="img/photoshop/new_night_bed.png" alt="Retouche photo nuit">
             </div>
 
-            <div class="image">
-              <img src="img/photoshop/SNCF.jpg" alt="affiche sncf">
+            <div class="image plus">
+              <div class="voir-plus">
+                <a href="#">Voir plus</a>
+              </div>
             </div>
           </div>
 
