ajout photo carousel

--- a/index.html
+++ b/index.html
@@ -264,7 +264,11 @@
               </div>
 
               <div class="image">
-                <img src="img/photoshop/new_night_bed.png" alt="Retouche photo nuit">
+                <img src="img/photoshop/night_bed_1.jpg" alt="Retouche photo nuit avant">
+              </div>
+
+              <div class="image">
+                <img src="img/photoshop/new_night_bed.png" alt="Retouche photo nuit après">
               </div>
 
               <div class="image plus">
