ajout et animation chiffres section 1

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
         </section>
 
-        <section class="first ovrflow">
+        <section class="first ovrflow" id="first">
             <div class="text">
                 <div class="big-text">
                     <h1>
@@ -82,6 +82,41 @@
                         Bienvenue sur mon portfolio, vous y trouverez quelques unes de mes réalisations. Bonne visite !
                     </h2>
                 </div>
+
+                <div class="chiffres-moi">
+                  <div class="age chiffre">
+                    <span class="counter-age counter-number">24</span>
+                    <div class="icon-txt">
+                      <img src="img/icons/anniversaire.png">
+                      <span class="age-txt counter-txt">Années sur terre</span>
+                    </div>
+                  </div>
+
+                  <div class="etudes chiffre">
+                    <span class="counter-etudes counter-number">4</span>
+                    <div class="icon-txt">
+                      <img src="img/icons/school.png">
+                      <span class="etudes-txt counter-txt">Années d'études post BAC (BAC+3)</span>
+                    </div>
+                  </div>
+
+                  <div class="diplomes chiffre">
+                    <span class="counter-diplomes counter-number">3</span>
+                    <div class="icon-txt">
+                      <img src="img/icons/diplomes.png">
+                      <span class="diplomes-txt counter-txt">Diplômes supérieurs (BTS / DUT / Licence)</span>
+                    </div>
+                  </div>
+
+                  <div class="cafes chiffre">
+                    <span class="counter-cafes counter-number">0</span>
+                    <div class="icon-txt">
+                      <img src="img/icons/cafe.png">
+                      <span class="cafes-txt counter-txt">Cafés nécessaires pour rester réveillé</span>
+                    </div>
+                    
+                  </div>
+              </div>
             </div>
 
             <div class="photo">
@@ -293,8 +328,10 @@
 
         <!-- Scripts JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        
 
         <script  src="js/navbar.js"></script>
         <script  src="js/functions.js"></script>
+        <script  src="js/text_ecrit.js"></script>
     </body>
 </html>
