--- a/index.html
+++ b/index.html
@@ -78,8 +78,10 @@
                     </h1>
                 </div>
                 <div class="little-text">
-                    <h2>
-                        Bienvenue sur mon portfolio, vous y trouverez quelques unes de mes réalisations. Bonne visite !
+                    <h2 class="txt-write"
+                    data-period="5000"
+                    data-rotate='[ "Bienvenue sur mon portfolio, vous y trouverez quelques unes de mes réalisations. Bonne visite !" ]'>
+                        <!-- Bienvenue sur mon portfolio, vous y trouverez quelques unes de mes réalisations. Bonne visite ! -->
                     </h2>
                 </div>
 
