test onclick suivant tablette

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
               <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24"><path d="M16.67 0l2.83 2.829-9.339 9.175 9.339 9.167-2.83 2.829-12.17-11.996z"/></svg>
             </div>
 
-            <div class="carousel-photos">
+            <div class="carousel-photos" id="carousel-photos">
               
               <div class="image">
                 <img src="img/photoshop/dj-affiche.jpg" alt="dj show">
@@ -316,7 +316,7 @@
 
             </div>
 
-            <div class="fleche-nav suivant" onclick="suivant()">
+            <div class="fleche-nav suivant" id="suivant" >
               <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24"><path d="M7.33 24l-2.83-2.829 9.339-9.175-9.339-9.167 2.83-2.829 12.17 11.996z"/></svg>
             </div>
             
