--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             </h2>
           </div>
 
-          <div class="images">
+          <div class="images" id="images">
             <div class="fleche-nav precedent" onclick="precedent()">
               <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24"><path d="M16.67 0l2.83 2.829-9.339 9.175 9.339 9.167-2.83 2.829-12.17-11.996z"/></svg>
             </div>
